correct httpd.conf

--- a/.docker/config/vhosts/httpd.conf
+++ b/.docker/config/vhosts/httpd.conf
@@ -36,7 +36,7 @@
         DirectoryIndex ${docrootweb}/index.php
         <IfModule mod_negociation.c>
             Options -MultiViews
-        <IfModule>
+        </IfModule>
 
         <IfModule mod_rewrite.c>
             RewriteEngine On
@@ -50,7 +50,7 @@
             RewriteRule ^index\.php(?:/(.*)|$) %{ENV:BASE}/$1 [R=301,L]
 
             RewriteCond %{REQUEST_FILENAME} -f
-            Rewrite ^ - [L]
+            RewriteRule ^ - [L]
 
             RewriteRule ^ %{ENV:BASE}/index.php [L]
         </IfModule>
